Fix responsivness on smallest screens size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,6 +537,11 @@ hr {
         font-size: 100%;
     }
 
+    #question {
+        font-size: 100%;
+        padding-top: 10px;
+    }
+
     .quiz-end {
         font-size: 125%;
     }
